# RustEmailClientProject

./: .env  .gitignore  Cargo.toml  R-Mail.pptx  Todos.txt  readme.md
RustBackend/: .env.example  .gitignore  Cargo.toml  Todos.txt
RustBackend/src/: constants.rs  main.rs
RustBackend/src/handlers/auth/: auth.rs  models.rs
RustBackend/src/handlers/email/: email_imap.rs  email_smtp.rs  helper_models.rs  mod.rs  models.rs  models_responders.rs
RustBackend/src/utils/: auth_guards.rs  utils_session.rs  utils_transports.rs
src/: constants.rs  main.rs
src/handlers/: mod.rs
src/handlers/auth/: auth.rs
src/handlers/email/: email_imap.rs  email_smtp.rs  helper_models.rs  mod.rs  models.rs  models_responders.rs
src/utils/: auth_guards.rs  mod.rs  utils.rs  utils_session.rs
tmp/: oi.html
