[package]
name = "EmailClient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
async-trait = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
actix-web = "4.2.1"
anyhow = { version = "1" }