[package]
name = "EmailClient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
async-trait = "0.1"
serde = { version = "1.0", features = [ "derive", "serde_derive" ] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = [ "full" ] }
actix-web = { version = "4.2.1", features = ["cookies"] }
actix-session = { version = "0.7.2", features = ["cookie-session"] }
anyhow = { version = "1" }
lettre = { version = "0.10.1", default-features = false, features = [ "smtp-transport", "tokio1", "tokio1-native-tls", "builder" ] }
imap = "2.4.1"
imap-proto = "0.10.2"
native-tls = "0.2.11"
futures-util = "0.3.25"
actix-multipart = "0.4.0"
lettre_email = "0.9"
chrono = {version = "0.4.23", features = ["serde"]}